Fix close button spacing

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,3 +1,7 @@
 .usa-modal-overlay {
   z-index: 10;
 }
+
+.usa-modal__close {
+  padding: 0.5rem;
+}
